; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_rockchip-iommu.c_rk_iommu_remove_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_rockchip-iommu.c_rk_iommu_remove_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.rk_iommudata* }
%struct.rk_iommudata = type { i32 }
%struct.rk_iommu = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*)* @rk_iommu_remove_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rk_iommu_remove_device(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.rk_iommu*, align 8
  %4 = alloca %struct.rk_iommudata*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = getelementptr inbounds %struct.device, %struct.device* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.rk_iommudata*, %struct.rk_iommudata** %7, align 8
  store %struct.rk_iommudata* %8, %struct.rk_iommudata** %4, align 8
  %9 = load %struct.device*, %struct.device** %2, align 8
  %10 = call %struct.rk_iommu* @rk_iommu_from_dev(%struct.device* %9)
  store %struct.rk_iommu* %10, %struct.rk_iommu** %3, align 8
  %11 = load %struct.rk_iommudata*, %struct.rk_iommudata** %4, align 8
  %12 = getelementptr inbounds %struct.rk_iommudata, %struct.rk_iommudata* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @device_link_del(i32 %13)
  %15 = load %struct.rk_iommu*, %struct.rk_iommu** %3, align 8
  %16 = getelementptr inbounds %struct.rk_iommu, %struct.rk_iommu* %15, i32 0, i32 0
  %17 = load %struct.device*, %struct.device** %2, align 8
  %18 = call i32 @iommu_device_unlink(i32* %16, %struct.device* %17)
  %19 = load %struct.device*, %struct.device** %2, align 8
  %20 = call i32 @iommu_group_remove_device(%struct.device* %19)
  ret void
}

declare dso_local %struct.rk_iommu* @rk_iommu_from_dev(%struct.device*) #1

declare dso_local i32 @device_link_del(i32) #1

declare dso_local i32 @iommu_device_unlink(i32*, %struct.device*) #1

declare dso_local i32 @iommu_group_remove_device(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
